<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="a">A</string>
    <string name="about">\?</string>
    <string name="abouts">关于</string>
    <string name="about_content">舞力全开PC特别版-控制器\nver2.0\n\n本启动器程序及手机APP均为免费下载，仅供学习研究使用，请在下载后24小时内删除，严禁用于商业用途，开发者不承担任何法律责任。\n\n开发者：hegeo@foxmail.com</string>
    <string name="app_name">舞力全开SE控制器</string>
    <string name="b">B</string>
    <string name="cancel">取消</string>
    <string name="connect">连接</string>
    <string name="custom">开始热舞</string>
    <string name="custom_connection">连接到主机</string>
    <string name="dl">D+L</string>
    <string name="down">|</string>
    <string name="dr">D+R</string>
    <string name="home">M</string>
    <string name="left">—</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="presses_to_go">" 次来退出并断开连接"</string>
    <string name="resolv_failed">Failed to resolve hostname</string>
    <string name="right">—</string>
    <string name="server_address">IP地址</string>
    <string name="server_port">连接码</string>
    <string name="socket_failed">Failed to open socket</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="two">2</string>
    <string name="ul">U+L</string>
    <string name="up">|</string>
    <string name="ur">U+R</string>
</resources>
