<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="573dp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip">

            <ImageView
                android:id="@id/imageView"
                android:layout_width="330dp"
                android:layout_height="330dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" />

        </LinearLayout>

        <RadioGroup
            android:id="@id/group_server"
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:focusableInTouchMode="false" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <Button
                android:id="@id/button_about"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btnstyle"
                android:text="@string/about"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@id/button_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btnstyle"
                android:text="@string/custom"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@id/button_connect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnstyle"
                android:text="@string/connect"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>